Layout Activity1 fertig

--- a/B_Versionierung_Git_C_Uebung/app/src/main/res/values/strings.xml
+++ b/B_Versionierung_Git_C_Uebung/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">B_Versionierung_Git_C_Uebung</string>
+    <string name="app_name">Tracking-System</string>
+
+    <string name="textViewLongitude"> </string>
+    <string name="textViewLatitude"> </string>
+    <string name="textViewDate"> </string>
+    <string name="btnAnzeigen">Anzeigen</string>
 </resources>
